fixes stretching of grid, due to missing 'repeat'

--- a/bwa/src/components/about/about.scss
+++ b/bwa/src/components/about/about.scss
@@ -3,12 +3,13 @@
 .about{
   background-color: #262626;
   height: 100vh;
+  width: 960px;
   font-family: 'Roboto', sans-serif;
   overflow-wrap: break-word;
   #content {
     display: grid;
-    grid-template-columns: (4, 25%);
-    grid-template-rows: (4, 25%);
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(4, 25%);
     // margin: 0 auto;
     height: 100%;
   }
@@ -21,11 +22,20 @@
     grid-column: 1/3;
     grid-row: 3/5;
     background: #262626;
+    p{
+      font-size: 32px;
+      line-height: 70px;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      color: #F1D268;
+    }
   }
   .three{
     grid-column: 3/5;
     grid-row: 1/5;
     background: url("../../../public/assets/picnic.png") center center;
     background-size: cover;
+    background-repeat: no-repeat;
   }
 }
